Ignore new 6.6.2 notifications related error messages
The seem to be non-fatal considering the test scenarios they are coming from
are still passing.

--- a/pytest.ini
+++ b/pytest.ini
@@ -61,6 +61,9 @@ qt_log_ignore =
     ^QBackingStore::endPaint\(\) called with active painter; did you forget to destroy it or call QPainter::end\(\) on it\?$
     # Qt 6.5 after system update, from qt-qt.accessibility.atspi
     Error in contacting registry: "org\.freedesktop\.DBus\.Error\.Disconnected" "Not connected to D-Bus server"
+    # Seen in Qt 6.6.2 on CI, https://github.com/qutebrowser/qutebrowser/pull/8106#issuecomment-1952320663
+    ^QDBusConnection: couldn't handle call to Notify, no slot matched
+    ^QDBusConnection: couldn't handle call to CloseNotification, no slot matched
 xfail_strict = true
 filterwarnings =
     error
