ci: don't fail all docker builds if one fails
Currently the unstable docker images are failing to build
(undefined symbol: _ZN5QFont11tagToStringEj, version
Qt_6. Looks like Qt has upgraded to 6.7 but pyqt6 hasn't been patched to
remove some symbols that are gone now).

But we might as well let the stable ones rebuild right?

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,6 +10,7 @@ jobs:
     if: "github.repository == 'qutebrowser/qutebrowser'"
     runs-on: ubuntu-20.04
     strategy:
+      fail-fast: false
       matrix:
         image:
           - archlinux-webkit
