mypy: Set local_partial_types = True
This is going to be default behavior in mypy 2.0, see:

- #8123
- https://mypy-lang.blogspot.com/2024/03/mypy-19-released.html
- https://mypy.readthedocs.io/en/stable/command_line.html#cmdoption-mypy-local-partial-types

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -29,6 +29,9 @@ pretty = True
 ### FIXME:v4 get rid of this
 no_implicit_optional = False
 
+### Future default behavior
+local_partial_types = True
+
 [mypy-hunter]
 # https://github.com/ionelmc/python-hunter/issues/43
 ignore_missing_imports = True
