tests: Add new ignored error messages

--- a/pytest.ini
+++ b/pytest.ini
@@ -64,6 +64,8 @@ qt_log_ignore =
     # Seen in Qt 6.6.2 on CI, https://github.com/qutebrowser/qutebrowser/pull/8106#issuecomment-1952320663
     ^QDBusConnection: couldn't handle call to Notify, no slot matched
     ^QDBusConnection: couldn't handle call to CloseNotification, no slot matched
+    # Qt 6.7
+    ^Path override failed for key base::DIR_APP_DICTIONARIES and path '.*/qtwebengine_dictionaries'
 xfail_strict = true
 filterwarnings =
     error
