tox: Avoid installing PyQt from source for bleeding envs
Right now, the Riverbank PyPI server has a PyQt5 sdist but no wheels.

--- a/tox.ini
+++ b/tox.ini
@@ -69,8 +69,8 @@ setenv =
 pip_pre = true
 deps = -r{toxinidir}/misc/requirements/requirements-tests-bleeding.txt
 commands_pre =
-    qt5: pip install --extra-index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt5 PyQtWebEngine PyQt5-Qt5 PyQtWebEngine-Qt5 PyQt5-sip
-    !qt5: pip install --extra-index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade PyQt6 PyQt6-WebEngine PyQt6-Qt6 PyQt6-WebEngine-Qt6 PyQt6-sip
+    qt5: pip install --extra-index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade --only-binary PyQt5,PyQtWebEngine PyQt5 PyQtWebEngine PyQt5-Qt5 PyQtWebEngine-Qt5 PyQt5-sip
+    !qt5: pip install --extra-index-url https://www.riverbankcomputing.com/pypi/simple/ --pre --upgrade --only-binary PyQt6,PyQt6-WebEngine PyQt6 PyQt6-WebEngine PyQt6-Qt6 PyQt6-WebEngine-Qt6 PyQt6-sip
 commands = {envpython} -bb -m pytest {posargs:tests}
 
 # other envs
