--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -1784,6 +1784,7 @@ hints.selectors:
       - '[role="button"]'
       - '[role="tab"]'
       - '[role="checkbox"]'
+      - '[role="switch"]'
       - '[role="menuitem"]'
       - '[role="menuitemcheckbox"]'
       - '[role="menuitemradio"]'
