Ignore more 6.7 DIR_APP_DICTIONARIOES log messages
In the bleeding edge CI tests I'm seeing:

  IGNORED: Path override failed for key base::DIR_APP_DICTIONARIES and path '/__w/qutebrowser/qutebrowser/.tox/bleeding/lib/python3.11/sitePath override failed for key base::DIR_APP_DICTIONARIES and path '/__w/qutebrowser/qutebrowser/.tox/bleeding/lib/python3.11/site-packages/PyQt6/Qt6/libexec/qtwebengine_dictionaries'
  INVALID: -packages/PyQt6/Qt6/libexec/qtwebengine_dictionaries'

Where the second line looks like maybe spill over from the first one
that is for some reason being printed twice and interleaved! Maybe
different processes or threads?

I did a regex for "line ending with this and with no spaces in it" which
is hopefully safe enough to not pick up a wrong line accidentally.

--- a/pytest.ini
+++ b/pytest.ini
@@ -66,6 +66,10 @@ qt_log_ignore =
     ^QDBusConnection: couldn't handle call to CloseNotification, no slot matched
     # Qt 6.7
     ^Path override failed for key base::DIR_APP_DICTIONARIES and path '.*/qtwebengine_dictionaries'
+    # Sometime the above message gets printed twice at the same time and the messages get interleaved.
+    # The last part of the outer message gets bumped down to a line on its own, so hopefully this
+    # catches that. And we don't see any other weird permutations of this.
+    ^[^ ]*qtwebengine_dictionaries'$
 xfail_strict = true
 filterwarnings =
     error
