--- a/misc/requirements/requirements-tests.txt
+++ b/misc/requirements/requirements-tests.txt
@@ -35,6 +35,7 @@ packaging==24.1
 parse==1.20.2
 parse-type==0.6.2
 platformdirs==4.2.2
+pillow==10.4.0
 pluggy==1.5.0
 py-cpuinfo==9.0.0
 Pygments==2.18.0
