--- a/tox.ini
+++ b/tox.ini
@@ -50,8 +50,9 @@ deps =
     pyqt64: -r{toxinidir}/misc/requirements/requirements-pyqt-6.4.txt
     pyqt65: -r{toxinidir}/misc/requirements/requirements-pyqt-6.5.txt
     pyqt66: -r{toxinidir}/misc/requirements/requirements-pyqt-6.6.txt
+    pyqt67: -r{toxinidir}/misc/requirements/requirements-pyqt-6.7.txt
 commands =
-    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65-!pyqt66: {envpython} scripts/link_pyqt.py --tox {envdir}
+    !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65-!pyqt66-!pyqt67: {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
     cov: {envpython} scripts/dev/check_coverage.py {posargs}
 
