Add Riverbank Computing as extra index for PyQt requirements
Easier fix instead of 6c4be8ef03bdcf09e86e14de02b8bd308e6e527b.
Seems to get picked up just fine, and shouldn't hurt when it's not needed, as we
don't use --pre. Thus, no development releases should be installed.

--- a/misc/requirements/requirements-pyqt-6.7.txt
+++ b/misc/requirements/requirements-pyqt-6.7.txt
@@ -5,3 +5,4 @@ PyQt6-Qt6==6.7.0
 PyQt6-sip==13.6.0
 PyQt6-WebEngine==6.7.0
 PyQt6-WebEngine-Qt6==6.7.0
+--extra-index-url https://www.riverbankcomputing.com/pypi/simple/
