--- a/misc/requirements/requirements-pyqt.txt
+++ b/misc/requirements/requirements-pyqt.txt
@@ -5,3 +5,4 @@ PyQt6-Qt6==6.7.0
 PyQt6-sip==13.6.0
 PyQt6-WebEngine==6.7.0
 PyQt6-WebEngine-Qt6==6.7.0
+--extra-index-url https://www.riverbankcomputing.com/pypi/simple/
