--- a/.mypy.ini
+++ b/.mypy.ini
@@ -240,6 +240,9 @@ disallow_untyped_defs = False
 [mypy-qutebrowser.misc.httpclient]
 disallow_untyped_defs = False
 
+[mypy-qutebrowser.misc.ipc]
+disallow_untyped_defs = False
+
 [mypy-qutebrowser.misc.keyhintwidget]
 disallow_untyped_defs = False
 
@@ -263,7 +266,6 @@ disallow_untyped_defs = False
 
 [mypy-qutebrowser.misc.split]
 disallow_untyped_defs = False
-
 
 [mypy-qutebrowser.qutebrowser]
 disallow_untyped_defs = False
