tests: Don't make QSslSocket error fail tests
Bleeding environment fails tests/unit/browser/webkit/test_certificateerror.py on Qt 5, maybe due to OpenSSL 3.x

--- a/pytest.ini
+++ b/pytest.ini
@@ -70,6 +70,8 @@ qt_log_ignore =
     # The last part of the outer message gets bumped down to a line on its own, so hopefully this
     # catches that. And we don't see any other weird permutations of this.
     ^[^ ]*qtwebengine_dictionaries'$
+    # Qt 5 on Archlinux
+    ^QSslSocket: cannot resolve .*
 xfail_strict = true
 filterwarnings =
     error
