--- a/tox.ini
+++ b/tox.ini
@@ -38,6 +38,7 @@ basepython =
     py310: {env:PYTHON:python3.10}
     py311: {env:PYTHON:python3.11}
     py312: {env:PYTHON:python3.12}
+    py313: {env:PYTHON:python3.13}
 deps =
     -r{toxinidir}/requirements.txt
     -r{toxinidir}/misc/requirements/requirements-tests.txt
