py313: Upgrade typing-extensions

--- a/tox.ini
+++ b/tox.ini
@@ -51,6 +51,8 @@ deps =
     pyqt64: -r{toxinidir}/misc/requirements/requirements-pyqt-6.4.txt
     pyqt65: -r{toxinidir}/misc/requirements/requirements-pyqt-6.5.txt
     pyqt66: -r{toxinidir}/misc/requirements/requirements-pyqt-6.6.txt
+commands_pre =
+    py313: pip install -U --pre typing-extensions==4.12.0rc1  # FIXME remove once released
 commands =
     !pyqt-!pyqt515-!pyqt5152-!pyqt62-!pyqt63-!pyqt64-!pyqt65-!pyqt66: {envpython} scripts/link_pyqt.py --tox {envdir}
     {envpython} -bb -m pytest {posargs:tests}
