tests: Re-add pytest-benchmark warning ignore
This was fixed but never released...

--- a/pytest.ini
+++ b/pytest.ini
@@ -76,4 +76,6 @@ xfail_strict = true
 filterwarnings =
     error
     default:Test process .* failed to terminate!:UserWarning
+    # Python 3.12: https://github.com/ionelmc/pytest-benchmark/issues/240 (fixed but not released)
+    ignore:(datetime\.)?datetime\.utcnow\(\) is deprecated and scheduled for removal in a future version\. Use timezone-aware objects to represent datetimes in UTC. (datetime\.)?datetime\.now\(datetime\.UTC\)\.:DeprecationWarning:pytest_benchmark\.utils
 faulthandler_timeout = 90
