--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,6 +20,7 @@ jobs:
       matrix:
         include:
           - testenv: pylint
+            args: "-j 0"
           - testenv: flake8
           - testenv: mypy-pyqt6
           - testenv: mypy-pyqt5
@@ -90,6 +91,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        workers: ["-n 2"]
         include:
           - testenv: py-qt5
             image: archlinux-webkit
@@ -118,7 +120,7 @@ jobs:
       - name: Set up problem matchers
         run: "python scripts/dev/ci/problemmatchers.py tests ${{ runner.temp }}"
       - name: Run tox
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }}"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }}"
 
   tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
@@ -127,6 +129,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        workers: ["-n 2"]
         include:
           ### PyQt 5.15.2 (Python 3.8)
           - testenv: py38-pyqt5152
@@ -218,10 +221,10 @@ jobs:
         run: "tox exec -e ${{ matrix.testenv }} -- python scripts/dev/update_3rdparty.py --gh-token ${{ secrets.GITHUB_TOKEN }}"
         if: "startsWith(matrix.os, 'windows-')"
       - name: "Run ${{ matrix.testenv }}"
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.args }}"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }} ${{ matrix.args }}"
         if: "startsWith(matrix.os, 'ubuntu-')"
       - name: "Run ${{ matrix.testenv }} without DBus"
-        run: "tox -e ${{ matrix.testenv }} -- ${{ matrix.args }}"
+        run: "tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }} ${{ matrix.args }}"
         if: "!startsWith(matrix.os, 'ubuntu-')"
       - name: Analyze backtraces
         run: "bash scripts/dev/ci/backtrace.sh ${{ matrix.testenv }}"
