--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,7 @@ env:
   FORCE_COLOR: "1"
   PY_COLORS: "1"
   MYPY_FORCE_TERMINAL_WIDTH: "180"
+  CI_PYTEST_WORKERS: "-n 2"
 
 jobs:
   linters:
@@ -20,7 +21,6 @@ jobs:
       matrix:
         include:
           - testenv: pylint
-            args: "-j 0"
           - testenv: flake8
           - testenv: mypy-pyqt6
           - testenv: mypy-pyqt5
@@ -91,7 +91,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        workers: ["-n 2"]
         include:
           - testenv: py-qt5
             image: archlinux-webkit
@@ -120,7 +119,7 @@ jobs:
       - name: Set up problem matchers
         run: "python scripts/dev/ci/problemmatchers.py tests ${{ runner.temp }}"
       - name: Run tox
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }}"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS"
 
   tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
@@ -129,7 +128,6 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        workers: ["-n 2"]
         include:
           ### PyQt 5.15.2 (Python 3.8)
           - testenv: py38-pyqt5152
@@ -221,10 +219,10 @@ jobs:
         run: "tox exec -e ${{ matrix.testenv }} -- python scripts/dev/update_3rdparty.py --gh-token ${{ secrets.GITHUB_TOKEN }}"
         if: "startsWith(matrix.os, 'windows-')"
       - name: "Run ${{ matrix.testenv }}"
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }} ${{ matrix.args }}"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS ${{ matrix.args }}"
         if: "startsWith(matrix.os, 'ubuntu-')"
       - name: "Run ${{ matrix.testenv }} without DBus"
-        run: "tox -e ${{ matrix.testenv }} -- ${{ matrix.workers }} ${{ matrix.args }}"
+        run: "tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS ${{ matrix.args }}"
         if: "!startsWith(matrix.os, 'ubuntu-')"
       - name: Analyze backtraces
         run: "bash scripts/dev/ci/backtrace.sh ${{ matrix.testenv }}"
