go back to hardcoding the worker number in each job
Two issues with putting it as an env var:
* shellcheck (via actionlint) claim it needs to be enclosed in double
  quotes, but it's already in a double quoted string and I can't be
  bothered dealing with yaml quoting
* the windows run doesn't seem to pick it up, maybe env vars don't work
  on windows?

Whatever, we can figure out how to make it nicely over overridable later. I
just want to get a stable branch I can re-run through the week.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,6 @@ env:
   FORCE_COLOR: "1"
   PY_COLORS: "1"
   MYPY_FORCE_TERMINAL_WIDTH: "180"
-  CI_PYTEST_WORKERS: "-n 2"
 
 jobs:
   linters:
@@ -119,7 +118,7 @@ jobs:
       - name: Set up problem matchers
         run: "python scripts/dev/ci/problemmatchers.py tests ${{ runner.temp }}"
       - name: Run tox
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- -n 2"
 
   tests:
     if: "!contains(github.event.head_commit.message, '[ci skip]')"
@@ -219,10 +218,10 @@ jobs:
         run: "tox exec -e ${{ matrix.testenv }} -- python scripts/dev/update_3rdparty.py --gh-token ${{ secrets.GITHUB_TOKEN }}"
         if: "startsWith(matrix.os, 'windows-')"
       - name: "Run ${{ matrix.testenv }}"
-        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS ${{ matrix.args }}"
+        run: "dbus-run-session -- tox -e ${{ matrix.testenv }} -- -n 2 ${{ matrix.args }}"
         if: "startsWith(matrix.os, 'ubuntu-')"
       - name: "Run ${{ matrix.testenv }} without DBus"
-        run: "tox -e ${{ matrix.testenv }} -- $CI_PYTEST_WORKERS ${{ matrix.args }}"
+        run: "tox -e ${{ matrix.testenv }} -- -n 2 ${{ matrix.args }}"
         if: "!startsWith(matrix.os, 'ubuntu-')"
       - name: Analyze backtraces
         run: "bash scripts/dev/ci/backtrace.sh ${{ matrix.testenv }}"
