--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ env:
   FORCE_COLOR: "1"
   PY_COLORS: "1"
   MYPY_FORCE_TERMINAL_WIDTH: "180"
-  # today is the fifth run
+  # today is the sixth run
 
 jobs:
   linters:
