ci: Drop macOS 11
Will be dropped on GitHub Actions tomorrow:
https://github.blog/changelog/2024-05-20-actions-upcoming-changes-to-github-hosted-macos-runners/

For unit tests, we now run them on macOS 13 instead, thus testing on all three
macOS versions we currently support.

For releases, this forces us to now support macOS 12 as the oldest supported
version and drop macOS 11 support. Thus, we should not have a v3.2.2 release.

Not backporting this commit so CI fails there rather than silently bumping up
requirements.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -173,14 +173,14 @@ jobs:
           - testenv: py312-pyqt67
             os: ubuntu-22.04
             python: "3.12"
-          ### macOS Big Sur
-          - testenv: py312-pyqt67
-            os: macos-11
-            python: "3.12"
-            args: "tests/unit"  # Only run unit tests on macOS
           ### macOS Monterey
           - testenv: py312-pyqt67
             os: macos-12
+            python: "3.12"
+            args: "tests/unit"  # Only run unit tests on macOS
+          ### macOS Ventura
+          - testenv: py312-pyqt67
+            os: macos-13
             python: "3.12"
             args: "tests/unit"  # Only run unit tests on macOS
           ### macOS Sonoma (M1 runner)
