--- a/qutebrowser/config/configdata.yml
+++ b/qutebrowser/config/configdata.yml
@@ -417,6 +417,10 @@ qt.workarounds.disable_hangouts_extension:
     Hangouts has been replaced with Meet,
     which appears to work without this extension.
 
+    Note this setting gets ignored and the Hangouts extension is always
+    disabled to avoid crashes on Qt 6.5.0 to 6.5.3 if dark mode is enabled,
+    as well as on Qt 6.6.0.
+
 ## auto_save
 
 auto_save.interval:
