Ignore no dictionary errors on CI
The message is:

    The following paths were searched for Qt WebEngine dictionaries:
      /tmp/qutebrowser-basedir-qrhbqblr/data/qtwebengine_dictionaries
    but could not find it.
    Spellchecking can not be enabled.

Tests are failing on "Logged unexpected errors".

--- a/pytest.ini
+++ b/pytest.ini
@@ -78,6 +78,7 @@ qt_log_ignore =
     # current text pattern.
     QItemSelectionModel: Selecting when no model has been set will result in a no-op.
     ^QSaveFile::commit: File \(.*/test_failing_flush0/foo\) is not open$
+    ^The following paths were searched for Qt WebEngine dictionaries:.*
 xfail_strict = true
 filterwarnings =
     error
